test/sema/generic-type-deinitializer.delta.output
generic-type-deinitializer.delta:6:17: error: unknown identifier 'b'
        var a = b
                ^
