test/sema/generic-type-deinitializer.delta
// RUN: %check_errors %not %delta -typecheck %s

struct C<T> {
    ~C() {
        // CHECK: [[@LINE+1]]:17: error: unknown identifier 'b'
        var a = b
    }
}

void main() {
    var c = C<int>()
}
